--- a/style.css
+++ b/style.css
@@ -6,9 +6,123 @@
 
 :root{
     font-size: 62.5%;
+
+    /* cores */ 
+    --tt-heading: #0C3440;
+    
+    --tt-label: #00453A;
+    --tt-input: #212529;
+    --ot-input: #02799D;
+    --bd-input: rgba(73, 80, 87, 0.3);
+    --bg-input: #DCE2E9;
+    --tt-placeholder: rgba(73, 80, 87, 0.5);
+    
+    --tt-button: white;
+    --bg-button: #02799D;
+    --bg-button-hover: #015e7a;
+    
+    --bg-error: #F03E3E;
+    --tt-error: white;
 }
 
 body{
     background-color: #040924;
-    font-size: 1.6rem;
+    
+    font-family: 'Roboto', sans-serif;
 }
+
+body, input, button{
+    font-size: 1.6rem;
+    line-height: 2rem;
+}
+
+.container {
+    display: grid;
+    height: 100vh;
+    place-content: center;
+}
+
+.card {
+    padding: 4.8rem 6.4rem 6.4rem;
+    background: white;
+    max-width: 42.8rem;
+    margin-inline: auto;
+
+    box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+}
+
+.title {
+    font-size: 3.2rem;
+    line-height: 4.0rem;
+    margin-bottom: 3.2rem;
+
+    color: var(--tt-heading);
+}
+
+form {
+    width: 30rem;
+}
+
+form label {
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+
+    color: var(--tt-label);
+    display: block;
+    margin-bottom: 0.8rem;
+}
+
+form input{
+    width: 100%;
+    border: 1px solid var(--tt-input);
+    padding: 1.6rem;
+    border-radius: 4px;
+    border-style: none;
+    background-color: var(--bg-input);
+}
+
+form input:focus {
+    outline: 2px solid var(--ot-input);
+}
+
+form input::placeholder{
+    color: var(--tt-placeholder);
+}
+
+.input-wrapper + .input-wrapper{
+    margin-top: 1.6rem;
+}
+
+label{
+    width: 100%;
+}
+
+button{
+    margin-top: 3.2rem;
+    background-color: var(--bg-button);
+    color: var(--tt-button);
+    width: 100%;
+    padding: 1.6rem;
+    border: none;
+    border-radius: 4px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+button svg{
+    padding-left: 0.8rem;
+    width: 2.2rem;
+    height: 2.2rem;
+}
+
+button:hover {
+    background-color: var(--bg-button-hover);
+}
+
+
