--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ body, input, button {
     line-height: 2rem;
 }
 
+.caixaResponsiva{
+    width: 100%;
+    padding: 16rem;
+}
 .container {
     height: 100vh;
     display: grid;
@@ -49,6 +53,7 @@ body, input, button {
 
     box-shadow: 0 .2rem .4rem rgba(0,0,0,0.1);
     border-radius: .6rem;
+    margin-top: -35rem;
 }
 
 .title {
@@ -180,4 +185,13 @@ form button:hover {
     opacity: 0;
     transform: translateY(-30px);
     transition: transform .5s;
+}
+
+@media (max-width: 490px){
+
+    .modal{
+        margin-top: 1rem;
+        width: 320px;
+        height: 20rem;
+    }
 }
